# Launchstack-Cast

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  fly.toml  go.mod  pyproject.toml
.claude/: settings.local.json
app/: lib.py  streamlit_app.py
cmd/cast-api/: main.go
cmd/cast-worker/: main.go
data/: README.md
docs/: PLAN.md  PROPOSAL.md
internal/api/: handlers.go  middleware.go  server.go
internal/config/: config.go
internal/db/: db.go  video.go
internal/graph/: graph.go
internal/identity/: identity.go
internal/ingest/: ingest.go
internal/jobs/: jobs.go
internal/llm/: llm.go
internal/perception/: perception.go
internal/pipeline/: pipeline.go
internal/pyworker/: README.md  pool.go  pool_test.go  pyworker.go  pyworker_test.go
internal/retrieval/: retrieval.go
migrations/: 0001_init.sql  0002_drop_jobs.sql
python/: README.md  pyproject.toml
python/common/: run.py
python/workers/: faces.py  transcribe.py  visual_embed.py
scripts/: download_visdrone.sh  splits_freeze.py
src/drone_search/: __init__.py  __main__.py  agent.py  cluster.py  config.py  document.py  embed.py  ingest.py  llm.py  retrieve.py  triage.py
src/drone_search/eval/: __init__.py  metrics.py
src/drone_search/index/: __init__.py  dense.py  identity.py  inverted.py
testdata/workers/: echo.py  fail.py
tests/: test_document.py  test_embed.py  test_index.py  test_retrieve.py  test_smoke.py
web/: Cast.html  README.md  app_simple.jsx  data.js
